# benchmarking

./: .env.example  .flake8  .gitignore  .gitmodules  Cargo.toml  HYPOTHESES.md  README.md  data_analysis.py  inventory.yaml  start.sh  start_benchmarks.sh
analysis/: data_analysis.py  execution_time.py  extract.py  load.py  marimo_data_analysis.py  requirements.txt  rq1.py  rq2.py  rq3.py  rq34.py  schemas.py  test.tex  test_ada.py  test_file_load.py  utils.py  visualization.py
config/: events_by_config.json  events_by_vendor.json  test.json
inventories.d/: lille_chiclet_nodes.json  lille_clusters.json  sites.json
inventories.d/grenoble/dahu/: dahu-1.json
inventories.d/grenoble/drac/: drac-1.json
inventories.d/grenoble/servan/: servan-1.json
inventories.d/grenoble/troll/: troll-1.json
inventories.d/grenoble/yeti/: yeti-1.json
jobs.d/: jobs.json  jobs.json.bck
libs/: inventory.sh  jobs.sh  logging.sh  results.sh  scripts.sh  tasks.sh
src/: configs.rs  inventories.rs  jobs.rs  main.rs  results.rs  scripts.rs  ssh.rs
templates/: alumet_alone.sh  alumet_and_perf.sh  baseline_consumption.sh  benchmark.sh  codecarbon_alone.sh  codecarbon_and_perf.sh  exit.sh  frequencies_benchmark.sh  hwpc_alone.sh  hwpc_and_perf.sh  install_packages.sh  oar_directives.sh  perf_alone.sh  results_directory_preparation.sh  rust_setup.sh  scaphandre_alone.sh  scaphandre_and_perf.sh  vjoule_alone.sh  vjoule_and_perf.sh  warmup.sh  zip_results.sh
utils/: transform.sh  transform_alumet.sh  transform_codecarbon.sh  transform_scaphandre.sh  transform_vjoule.sh
(+109 files in other folders)
