[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.65"
serde_json = "1.0.132"
openssl = { version = "0.10.68", features = ["vendored"] }
dotenv = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
mockito = "1.5.0"
ssh2 = "0.9.4"
serde_yaml = "0.9.34"
openssh = { version = "0.11.2", features = ["native-mux"] }
openssh-sftp-client = { version = "0.15.1", features = ["openssh"] }
rand = "0.8.5"
regex = "1.11.1"
askama = { version = "0.12.1", features = ["serde", "serde-json", "serde-yaml", "serde_json", "serde_yaml"] }
derive_more = { version = "1.0.0", features = ["display"] }
flate2 = { version = "1.0.34", features = ["zlib"] }
tar = "0.4.43"
bytes = "1.8.0"
subprocess = "0.2.9"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
